--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "contact_node",
+	"name": "contact-node",
 	"version": "1.0.0",
 	"description": "Submit Contact Form Node",
 	"author": "Jonathan Lee <jonathan.lee.devel@gmail.com>",
@@ -8,8 +8,8 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"express": "^4.16.1",
-		"mongodb": "^3.3.2",
-		"nodemailer": "^6.3.0"
+		"express": "^4.18.1",
+		"mongodb": "^4.6.0",
+		"nodemailer": "^6.7.5"
 	}
 }
