--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-	"name": "contact-node",
-	"version": "1.0.0",
-	"description": "Submit Contact Form Node",
-	"author": "Jonathan Lee <jonathan.lee.devel@gmail.com>",
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"dependencies": {
-		"express": "^4.18.2",
-		"mongodb": "^6.0.0",
-		"nodemailer": "^6.9.4"
-	}
+  "name": "contact-node",
+  "version": "1.0.1",
+  "description": "Submit Contact Form Node",
+  "author": "Jonathan Lee <jonathan.lee.devel@gmail.com>",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongodb": "^6.0.0",
+    "nodemailer": "^6.9.4"
+  }
 }
